[gd_scene load_steps=11 format=3 uid="uid://c2ebhq5vsagjd"]

[ext_resource type="Script" path="res://frog.gd" id="1_xraqs"]
[ext_resource type="Shader" path="res://rainbow.gdshader" id="2_o8ijs"]
[ext_resource type="Texture2D" uid="uid://bi7r1juq2j515" path="res://assets/frog.png" id="2_vj2qf"]
[ext_resource type="Texture2D" uid="uid://dbmu142aa25oa" path="res://assets/frog-blush.png" id="3_8bt4j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_up6wu"]
shader = ExtResource("2_o8ijs")
shader_parameter/speed = -0.3
shader_parameter/stripe_width = 5.2
shader_parameter/pixel_size = 8.0
shader_parameter/enabled = false

[sub_resource type="SpriteFrames" id="SpriteFrames_2a1oo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vj2qf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_viqq0"]
radius = 47.0425

[sub_resource type="Animation" id="Animation_almq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/BlushSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_g8xbm"]
resource_name = "blush"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/BlushSprite2D:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ceepv"]
_data = {
"RESET": SubResource("Animation_almq3"),
"blush": SubResource("Animation_g8xbm")
}

[node name="Frog" type="RigidBody2D"]
collision_layer = 0
collision_mask = 5
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 10
linear_velocity = Vector2(-300, 0)
linear_damp_mode = 1
script = ExtResource("1_xraqs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_up6wu")
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2a1oo")

[node name="BlushSprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
self_modulate = Color(1, 1, 1, 0)
texture = ExtResource("3_8bt4j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_viqq0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(8.6, 8.6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ceepv")
}

[node name="HoneymoonTimer" type="Timer" parent="."]
one_shot = true

[node name="BonusTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="HoneymoonTimer" to="." method="_on_honeymoon_timer_timeout"]
[connection signal="timeout" from="BonusTimer" to="." method="_on_bonus_timer_timeout"]
